# MyTransformer

./: .gitignore  CLAUDE.md  README.md  colab_bert.ipynb  colab_train.ipynb  config.py  plot_history.py  pyproject.toml  requirements.txt
src/transformer/: __init__.py  train.py  translate.py  utils.py
src/transformer/bert/: __init__.py  data.py  model.py  train.py
src/transformer/data/: dataset.py  tokenizer.py  vocab.py
src/transformer/model/: attention.py  decoder.py  encoder.py  feedforward.py  layers.py  positional.py  transformer.py
tests/: test_attention.py  test_bert_overfit.py  test_masks.py  test_model_shapes.py  test_overfit.py  test_tokenizer_vocab.py
